--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/bus_db?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=71997339
+spring.datasource.password=---
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
